website/static/css/modal_views.css
.modal_main_backdrop{
	position:fixed;
	top:0;
	bottom:0;
	left:0;
	right:0;
	z-index:20;
	display:flex;
	background:rgba(0,0,0,0.2);
	justify-content:center;
	align-items:center;
	opacity:0;
	pointer-events:none;
	-webkit-transition:0.2s;
	transition:0.2s;
}


.modal_container_box{
	width:100%;
	max-width:700px;
	min-height:250px;
	background:var(--primary_background);
	color:var(--primary_color);
	border-radius:5px;
	box-shadow:0px 0px 3px 3px rgba(55,55,55,0.4);
	opacity:1;
}



.modal_main_backdrop.show{
	opacity:1;
	pointer-events:all;
	max-height:100vh;
	
}





.modal_container_box > .top_header{
	width:100%;
	min-height:40px;
	border:solid transparent 1px;
	display:flex;
	border-bottom:rgba(120, 120, 120, 0.6) solid 1px;
	
}


.modal_container_box > .top_header > .close_modal_tright{
	font-size:1.4em;
	font-weight:bold;
	display:flex;
	align-items:center;
	justify-content:center;
	min-width:30px;
	cursor:pointer;
}


.modal_container_box > .top_header > .title_form_top{
	font-weight:bold;
	display:flex;
	align-items:center;
	justify-content:center;
	flex-grow:1;
	overflow:hidden;
	white-space:nowrap;
}


.modal_container_box > .main_contents_box{
	min-height:100px;
	/* border:solid red 1px; */
	overflow-y:auto;
	overflow-x:hidden;
	max-height:90vh;
	padding:5px;
	
	
}


/* Extra */

select.form_display[readonly] {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: none;
	
	padding:10px;

    pointer-events: none;   /* prevents dropdown */
    user-select: text;      /* allows text selection */
}

textarea.form_display[readonly] {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: none;
	min-height:150px !important;
	padding:5px;
    pointer-events: none;   /* prevents dropdown */
    user-select: text;      /* allows text selection */
}

.no_backdrop{
	background-color:transparent;
	z-index:100;
}



.floating_print{
	position:sticky;
	bottom:5px;
	right:2px;
	left:0;
	float:right;
	cursor:pointer;
	width:50px;
	border-radius:10px;
	background:var(--primary_background);
	padding:10px;
	box-shadow:0px 0px 2px 2px rgba(0,0,0,0.2);
	text-align:center;
	display:flex;
	align-items:center;
	justify-content:center;
	aspect-ratio:1/1;
	-webkit-transition:0.2s;
	transition:0.2s;
}

.floating_print:hover{
	opacity:0.7;
}
.floating_print:active{
	-webkit-transform:scale(0.9);
	transform:scale(0.9);
}


.larger_{
	max-width:1024px !important;
	
}

